--- a/.gutconfig.json
+++ b/.gutconfig.json
@@ -1,5 +1,10 @@
 {
-  "dirs": ["res://Tests/"],
+  "dirs": [
+"res://Unit_testing/GoGame",
+  "res://test",
+  "res://Unit_testing/GoGame"],
+
+
   "include_subdirs": true,
   "ignore_pause": true,
   "log_level": 2,
